deployment/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abc-jobs-frontend
  labels:
    app: abc-jobs-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: abc-jobs-frontend
  template:
    metadata:
      labels:
        app: abc-jobs-frontend
    spec:
      containers:
        - name: abc-jobs-frontend
          image: us-central1-docker.pkg.dev/abc-jobs-402104/abc-jobs-repository/abc-jobs-frontend:latest
          ports:
            - containerPort: 80
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: abc-jobs-frontend-service
  annotations:
    cloud.google.com/backend-config: '{"default": "abc-jobs-frontend-config"}'
spec:
  type: NodePort
  selector:
    app: offers
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31019
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress-8
  labels:
    name: gateway-ingress-8
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /offers
            backend:
              service:
                name: offers-service
                port:
                  number: 80
          - pathType: Prefix
            path: /auth
            backend:
              service:
                name: auth-service
                port:
                  number: 80
